# deepagents

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  debug_tavily_mcp.py  pyproject.toml  start-deepagents-rag.sh  test_deepagents_mcp.py
.claude/: CLAUDE.md  settings.json
.claude/commands/: evaluate-rag.md  research-deep.md  strategy-compare.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  task.md
.github/workflows/: ci.yaml  ci.yml  release.yaml
adr/: adr-003-unified-infrastructure-strategy.md  adr-004-repository-separation-pattern.md  adr-005-mcp-integration-triangle-pattern.md  adr-006-tier-based-architecture-constraints.md  adr-007-model-pinning-consistency-pattern.md  adr-008-infrastructure-centralization-pattern.md  adr-009-cqrs-mcp-implementation-pattern.md  adr-010-evaluation-integration-pattern.md  adr-template.md
examples/research/: README.md  kill-ls.py  research_agent.py  research_agent_mcp.py  test_mcp_simple.py
integrations/mcp-rag/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  compose.yaml  mcp_server_entry.py  minimal_test.py  minimal_test_http.py  pyproject.toml  simple_mcp_server.py  test_mcp_simple.py
integrations/mcp-rag/scripts/: benchmark.py  ingest_sample_documents.py  init.sql  performance_baseline.py
integrations/mcp-rag/src/deepagents_mcp_rag/: __init__.py  config.py
integrations/mcp-rag/src/deepagents_mcp_rag/agent/: __init__.py  deep_agent_boot.py  prompts.py
integrations/mcp-rag/src/deepagents_mcp_rag/eval/: __init__.py  dataset.py  golden_set.jsonl  harness.py  metrics.py
integrations/mcp-rag/src/deepagents_mcp_rag/mcp/: __init__.py  resources.py  server.py  tools.py
integrations/mcp-rag/src/deepagents_mcp_rag/retrievers/: __init__.py  base.py  bm25.py  ensemble.py  factory.py  multi_query.py  parent_doc.py  rerank.py  vector.py
integrations/mcp-rag/src/deepagents_mcp_rag/utils/: __init__.py  cache.py  document_store.py  embeddings.py  llm.py  logging.py  telemetry.py  vector_store.py
integrations/mcp-rag/tests/: test_config.py  test_mcp_server.py  test_retriever_factory.py  test_simple.py
references/: INSTRUCTIONS.md  QUICK-REFERENCE.md  README.md  claude-code-config-change-management.md  deep-agents-mcp-integration.md  draft-project-cookbook.md  feature-branch-strategy.md  implementation-audit-report.md  infrastructure-health-report.md  langchain-local-deep-researcher-mcp-enhancement-plan-v3.md  mcp-session-management-guide.md  process-improvements-checklists.md  requirements-traceability-framework.md  requirements-traceability-matrix.md  retrospective-analysis.md  test-status-report.md  unified-infrastructure-implementation-summary.md
references/adrs/: adr-003-deepagents-mcp-rag-integration-architecture.md
scripts/infrastructure/: connect-to-shared-infrastructure.sh
src/deepagents/: model.py
